--- a/package.json
+++ b/package.json
@@ -1,39 +1,64 @@
 {
-  "name": "remind-time",
+  "name": "ultimate-nokori-jikan-wakaru-yaatu",
+  "author": "Ali Karatas <ali0207k@gmail.com> ",
   "private": true,
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "run-p dev:*",
+    "dev:vite": "vite",
+    "dev:scss": "typed-scss-modules --exportType default -w src/**/*.module.scss",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1",
+    "@chakra-ui/icons": "^2.1.1",
+    "@tauri-apps/api": "^2.0.0-beta.12",
+    "chart.js": "^4.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "typescript-eslint": "^7.7.1"
   },
   "devDependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@eslint/eslintrc": "^3.0.2",
     "@eslint/js": "^9.1.1",
-    "@tauri-apps/cli": "^1",
+    "@tauri-apps/cli": "^2.0.0-beta.18",
     "@types/dateformat": "^5.0.2",
     "@types/eslint": "^8.56.10",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "@typescript-eslint/parser": "^7.10.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "dateformat": "^5.0.3",
-    "eslint": "^9.1.1",
+    "eslint": "8",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "framer-motion": "^11.2.6",
     "globals": "^15.1.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
+    "react-chartjs-2": "^5.2.0",
+    "react-router-dom": "^6.23.1",
+    "sass": "^1.77.2",
+    "typed-scss-modules": "^8.0.1",
     "typescript": "^5.4.5",
-    "vite": "^5.2.10"
+    "vite": "^5.2.10",
+    "wanakana": "^5.3.1",
+    "zustand": "^4.5.2"
   }
 }
