--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "remind-time"
-version = "0.0.0"
+name = "ultimate-nokori-jikan-wakaru-yaatu"
+version = "0.0.1"
 description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
@@ -8,12 +8,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1", features = [] }
+tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "updater", "system-tray", "shell-open"] }
+tauri = { version = "2.0.0-beta", features = ["tray-icon", "image-png"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tauri-plugin-shell = "2.0.0-beta.5"
+tokio = "1.37.0"
+resvg = "0.41.0"
+serde_yaml = "0.9.34"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
