--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ultimate-nokori-jikan-wakaru-yaatu"
-version = "0.0.3"
+version = "0.0.4"
 description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
@@ -18,6 +18,7 @@ tauri-plugin-shell = "2.0.0-beta"
 tauri-plugin-updater = "2.0.0-beta"
 tauri-plugin-dialog = "2.0.0-beta"
 tauri-plugin-process = "2.0.0-beta"
+tauri-plugin-log = "2.0.0-beta"
 tokio = "1.37.0"
 resvg = "0.41.0"
 serde_yaml = "0.9.34"
