--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ultimate-nokori-jikan-wakaru-yaatu"
-version = "0.0.5"
+version = "1.0.0"
 description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
@@ -26,3 +26,6 @@ serde_yaml = "0.9.34"
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
 custom-protocol = ["tauri/custom-protocol"]
+
+[workspace.metadata]
+clippy.toml = "clippy.toml"
