--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ultimate-nokori-jikan-wakaru-yaatu"
-version = "1.0.3"
+version = "1.0.4"
 description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
@@ -20,8 +20,9 @@ tauri-plugin-dialog = "2.0.0-beta"
 tauri-plugin-process = "2.0.0-beta"
 tauri-plugin-log = "2.0.0-beta"
 tokio = "1.37.0"
-resvg = "0.41.0"
 serde_yaml = "0.9.34"
+chrono = "0.4.38"
+chrono-tz = "0.9.0"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
