--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,9 @@ jobs:
         runs-on: ${{ matrix.platform }}
         steps:
             - uses: actions/checkout@v3
+              with:
+                  fetch-depth: 0
+
             - uses: oven-sh/setup-bun@v1
               with:
                   bun-version: latest
@@ -21,6 +24,18 @@ jobs:
               uses: dtolnay/rust-toolchain@stable
             - name: install frontend dependencies
               run: bun install
+            - name: Install Python
+              uses: actions/setup-python@v2
+            - name: Restore mtime
+              run: python ./git-restore-mtime.py
+
+            - uses: actions/cache@v2
+              with:
+                  path: |
+                      ~/.cargo/registry
+                      ~/.cargo/git
+                      src-tauri/target
+                  key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
             - uses: tauri-apps/tauri-action@v0
               env:
                   TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD}}
