--- a/package.json
+++ b/package.json
@@ -1,43 +1,74 @@
 {
-  "name": "uljika-2.0",
-  "private": true,
-  "sideEffects": false,
-  "type": "module",
-  "scripts": {
-    "build": "remix vite:build",
-    "dev": "remix vite:dev",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc"
-  },
-  "dependencies": {
-    "@remix-run/node": "^2.12.1",
-    "@remix-run/react": "^2.12.1",
-    "@remix-run/serve": "^2.12.1",
-    "isbot": "^4.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@remix-run/dev": "^2.12.1",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.38.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.1.6",
-    "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1"
-  },
-  "engines": {
-    "node": ">=20.0.0"
-  }
+    "name": "uljika",
+    "version": "0.1.0",
+    "scripts": {
+        "build": "tsc && vite build",
+        "dev": "vite",
+        "preview": "vite preview",
+        "tauri": "tauri",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build"
+    },
+    "dependencies": {
+        "@remix-run/node": "^2.12.1",
+        "@remix-run/react": "^2.12.1",
+        "@tauri-apps/api": ">=2.0.2",
+        "@tauri-apps/plugin-shell": ">=2.0.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
+    },
+    "devDependencies": {
+        "@chromatic-com/storybook": "^2.0.2",
+        "@eslint/compat": "^1.2.0",
+        "@eslint/eslintrc": "^3.1.0",
+        "@eslint/js": "^9.12.0",
+        "@mantine/core": "^7.13.2",
+        "@mantine/hooks": "^7.13.2",
+        "@remix-run/dev": "^2.12.1",
+        "@souhaildev/reactemojis": "^1.0.5",
+        "@storybook/addon-essentials": "^8.3.5",
+        "@storybook/addon-interactions": "^8.3.5",
+        "@storybook/addon-links": "^8.3.5",
+        "@storybook/addon-onboarding": "^8.3.5",
+        "@storybook/blocks": "^8.3.5",
+        "@storybook/react": "^8.3.5",
+        "@storybook/react-vite": "^8.3.5",
+        "@storybook/test": "^8.3.5",
+        "@tauri-apps/cli": ">=2.0.2",
+        "@types/react": "^18.3.11",
+        "@types/react-dom": "^18.3.0",
+        "@vitejs/plugin-react": "^4.3.2",
+        "dprint": "^0.47.2",
+        "eslint": "^9.12.0",
+        "eslint-import-resolver-typescript": "^3.6.3",
+        "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-jsx-a11y": "^6.10.0",
+        "eslint-plugin-react": "^7.37.1",
+        "eslint-plugin-react-hooks": "^4.6.2",
+        "eslint-plugin-react-refresh": "^0.4.12",
+        "eslint-plugin-storybook": "^0.9.0",
+        "globals": "^15.10.0",
+        "marked": "^14.1.2",
+        "mdast": "^3.0.0",
+        "mdast-util-find-and-replace": "^3.0.1",
+        "postcss": "^8.4.47",
+        "postcss-preset-mantine": "^1.17.0",
+        "postcss-simple-vars": "^7.0.1",
+        "react-markdown": "^9.0.1",
+        "remark-breaks": "^4.0.0",
+        "remark-gfm": "^4.0.0",
+        "storybook": "^8.3.5",
+        "storybook-addon-mantine": "^4.0.2",
+        "storybook-css-modules": "^1.0.8",
+        "storybook-dark-mode": "^4.0.2",
+        "typescript": "^5.6.2",
+        "typescript-eslint": "^8.8.1",
+        "unist-builder": "^4.0.0",
+        "unist-util-visit": "^5.0.0",
+        "vite": "^5.4.8",
+        "vite-tsconfig-paths": "^5.0.1",
+        "zustand": "^5.0.0-rc.2"
+    },
+    "private": true,
+    "type": "module"
 }
