--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "uljika",
     "private": true,
-    "version": "0.1.0",
+    "version": "0.0.2",
     "type": "module",
     "scripts": {
         "dev": "run-p vite dev:*",
@@ -41,6 +41,7 @@
         "@storybook/react": "^8.3.6",
         "@storybook/react-vite": "^8.3.6",
         "@storybook/test": "^8.3.6",
+        "@tabler/icons-react": "^3.21.0",
         "@tanstack/react-query": "^5.59.16",
         "@tauri-apps/cli": "^2.0.4",
         "@tauri-apps/plugin-updater": "^2.0.0",
