--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@remix-run/node": "^2.13.1",
         "@remix-run/react": "^2.13.1",
         "@tauri-apps/api": "^2.0.3",
+        "@tauri-apps/plugin-autostart": "~2",
         "@tauri-apps/plugin-process": "~2.0.0",
         "@tauri-apps/plugin-shell": "^2.0.1",
         "isbot": "^4.4.0",
