--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,3 +30,6 @@ tauri-plugin-shell = "2.0.0"
 tauri-plugin-updater = "2.0.2"
 tokio = { version = "1.41.0", features = ["tracing"] }
 ts-rs = "10.0.0"
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-autostart = "2"
