--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
         "build-storybook": "storybook build"
     },
     "dependencies": {
-        "@remix-run/node": "^2.13.1",
-        "@remix-run/react": "^2.13.1",
-        "@tauri-apps/api": "^2.0.3",
-        "@tauri-apps/plugin-autostart": "~2",
+        "@remix-run/node": "^2.15.0",
+        "@remix-run/react": "^2.15.0",
+        "@tauri-apps/api": "^2.1.1",
+        "@tauri-apps/plugin-autostart": "~2.0.0",
         "@tauri-apps/plugin-process": "~2.0.0",
         "@tauri-apps/plugin-shell": "^2.0.1",
         "isbot": "^4.4.0",
@@ -27,32 +27,33 @@
     },
     "devDependencies": {
         "@chromatic-com/storybook": "^2.0.2",
-        "@eslint/compat": "^1.2.1",
-        "@eslint/eslintrc": "^3.1.0",
-        "@eslint/js": "^9.13.0",
-        "@mantine/core": "^7.13.4",
-        "@mantine/hooks": "^7.13.4",
-        "@remix-run/dev": "^2.13.1",
+        "@eslint/compat": "^1.2.3",
+        "@eslint/eslintrc": "^3.2.0",
+        "@eslint/js": "^9.15.0",
+        "@mantine/core": "^7.14.3",
+        "@mantine/hooks": "^7.14.3",
+        "@mantine/modals": "^7.14.3",
+        "@remix-run/dev": "^2.15.0",
         "@souhaildev/reactemojis": "^1.0.5",
-        "@storybook/addon-essentials": "^8.3.6",
-        "@storybook/addon-interactions": "^8.3.6",
-        "@storybook/addon-links": "^8.3.6",
-        "@storybook/addon-onboarding": "^8.3.6",
-        "@storybook/blocks": "^8.3.6",
-        "@storybook/react": "^8.3.6",
-        "@storybook/react-vite": "^8.3.6",
-        "@storybook/test": "^8.3.6",
-        "@tabler/icons-react": "^3.21.0",
-        "@tanstack/react-query": "^5.59.16",
-        "@tauri-apps/cli": "^2.0.4",
+        "@storybook/addon-essentials": "^8.4.5",
+        "@storybook/addon-interactions": "^8.4.5",
+        "@storybook/addon-links": "^8.4.5",
+        "@storybook/addon-onboarding": "^8.4.5",
+        "@storybook/blocks": "^8.4.5",
+        "@storybook/react": "^8.4.5",
+        "@storybook/react-vite": "^8.4.5",
+        "@storybook/test": "^8.4.5",
+        "@tabler/icons-react": "^3.23.0",
+        "@tanstack/react-query": "^5.61.5",
+        "@tauri-apps/cli": "^2.1.0",
         "@tauri-apps/plugin-updater": "^2.0.0",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
         "@types/react-transition-group": "^4.4.11",
-        "@vitejs/plugin-react": "^4.3.3",
+        "@vitejs/plugin-react": "^4.3.4",
         "date-fns": "^4.1.0",
         "dprint": "^0.47.5",
-        "eslint": "^9.13.0",
+        "eslint": "^9.15.0",
         "eslint-import-resolver-typescript": "^3.6.3",
         "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -60,12 +61,12 @@
         "eslint-plugin-react-hooks": "^4.6.2",
         "eslint-plugin-react-refresh": "^0.4.14",
         "eslint-plugin-storybook": "^0.9.0",
-        "globals": "^15.11.0",
-        "marked": "^14.1.3",
+        "globals": "^15.12.0",
+        "marked": "^14.1.4",
         "mdast": "^3.0.0",
         "mdast-util-find-and-replace": "^3.0.1",
         "npm-run-all": "^4.1.5",
-        "postcss": "^8.4.47",
+        "postcss": "^8.4.49",
         "postcss-preset-mantine": "^1.17.0",
         "postcss-simple-vars": "^7.0.1",
         "react-flip-numbers": "^3.0.8",
@@ -73,18 +74,18 @@
         "react-transition-group": "^4.4.5",
         "remark-breaks": "^4.0.0",
         "remark-gfm": "^4.0.0",
-        "sass": "^1.80.4",
-        "storybook": "^8.3.6",
+        "sass": "^1.81.0",
+        "storybook": "^8.4.5",
         "storybook-addon-mantine": "^4.0.2",
         "storybook-css-modules": "^1.0.8",
         "storybook-dark-mode": "^4.0.2",
         "typed-scss-modules": "^8.0.1",
-        "typescript": "^5.6.3",
-        "typescript-eslint": "^8.11.0",
+        "typescript": "^5.7.2",
+        "typescript-eslint": "^8.16.0",
         "unist-builder": "^4.0.0",
         "unist-util-visit": "^5.0.0",
-        "vite": "^5.4.10",
-        "vite-tsconfig-paths": "^5.0.1",
-        "zustand": "^5.0.0"
+        "vite": "^5.4.11",
+        "vite-tsconfig-paths": "^5.1.3",
+        "zustand": "^5.0.1"
     }
 }
