--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,35 +1,43 @@
-[package]
-name = "uljika"
-version = "2.3.0"
-authors = ["Alinco8"]
-edition = "2021"
-description = "Ultimate Nokori Jikan Wakaru Yaatu"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[lib]
-# The `_lib` suffix may seem redundant but it is necessary
-# to make the lib name unique and wouldn't conflict with the bin name.
-# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
-name = "uljika_lib"
-crate-type = ["staticlib", "cdylib", "rlib"]
-
 [build-dependencies]
-tauri-build = { version = "2.0.0", features = [] }
+  [build-dependencies.tauri-build]
+    features = []
+    version = '2.0.0'
 
 [dependencies]
-chrono = "0.4.38"
-chrono-tz = "0.10.0"
-handlebars = "6.2.0"
-log = "0.4.22"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-tauri = { version = "2.0.6", features = ["tray-icon"] }
-tauri-plugin-process = "2"
-tauri-plugin-shell = "2.0.0"
-tauri-plugin-updater = "2.0.2"
-tokio = { version = "1.41.0", features = ["tracing"] }
-ts-rs = "10.0.0"
+  chrono = '0.4.38'
+  chrono-tz = '0.10.0'
+  handlebars = '6.2.0'
+  log = '0.4.22'
+  serde_json = '1'
+  tauri-plugin-process = '2'
+  tauri-plugin-shell = '2.0.0'
+  tauri-plugin-updater = '2.0.2'
+  ts-rs = '10.0.0'
 
-[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
-tauri-plugin-autostart = "2"
+  [dependencies.serde]
+    features = ['derive']
+    version = '1'
+
+  [dependencies.tauri]
+    features = ['tray-icon']
+    version = '2.0.6'
+
+  [dependencies.tokio]
+    features = ['tracing']
+    version = '1.41.0'
+
+[lib]
+  crate-type = ['staticlib', 'cdylib', 'rlib']
+  name = 'uljika_lib'
+
+[package]
+  authors = ['Alinco8']
+  description = 'Ultimate Nokori Jikan Wakaru Yaatu'
+  edition = '2021'
+  name = 'uljika'
+  version = '2.3.1'
+
+[target]
+  [target.'cfg(not(any(target_os = "android", target_os = "ios")))']
+    [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+      tauri-plugin-autostart = '2'
