--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,12 +39,15 @@ jobs:
                   key: ${{ runner.os }}_${{matrix.target}}-cargo-${{ hashFiles('**/Cargo.lock') }}
             - name: Restore mtime
               run: python ./git-restore-mtime.py
+            - uses: taiki-e/cache-cargo-install-action@v2
+              with:
+                  tool: cargo-bump
+
+              # ==== Build ====
+
             - name: Install dependencies
               run: |
                   bun i --frozen-lockfile
-
-            # ==== Build ====
-
             - name: Release
               run: bunx semantic-release
               env:
@@ -53,6 +56,7 @@ jobs:
                   TAURI_SIGNING_PRIVATE_KEY: ${{secrets.TAURI_SIGNING_PRIVATE_KEY}}
 
             # ==== Post ====
+
             - uses: actions/cache/save@v4
               with:
                   path: |
