--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,18 +39,23 @@ jobs:
                   key: ${{ runner.os }}_${{matrix.target}}-cargo-${{ hashFiles('**/Cargo.lock') }}
             - name: Restore mtime
               run: python ./git-restore-mtime.py
+            - uses: taiki-e/cache-cargo-install-action@v2
+              with:
+                  tool: cargo-bump
+
+              # ==== Build ====
+
             - name: Install dependencies
               run: |
                   bun i --frozen-lockfile
-
-            # ==== Build ====
-
             - name: Release
               run: bunx semantic-release
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD}}
                   TAURI_SIGNING_PRIVATE_KEY: ${{secrets.TAURI_SIGNING_PRIVATE_KEY}}
+
+            # ==== Post ====
 
             # ==== Post ====
             - uses: actions/cache/save@v4
