--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "@types/react-dom": "^18.3.1",
         "@types/react-transition-group": "^4.4.11",
         "@vitejs/plugin-react": "^4.3.4",
+        "conventional-changelog-conventionalcommits": "^8.0.0",
         "cz-conventional-changelog": "^3.3.0",
         "date-fns": "^4.1.0",
         "dprint": "^0.47.5",
