--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
         "react-markdown": "^9.0.1",
         "react-transition-group": "^4.4.5",
         "remark-breaks": "^4.0.0",
+        "remark-emoji": "^5.0.1",
         "remark-gfm": "^4.0.0",
         "sass": "^1.81.0",
         "semantic-release": "^24.2.0",
