--- a/package.json
+++ b/package.json
@@ -32,33 +32,33 @@
         "@tauri-apps/plugin-autostart": "~2.0.0",
         "@tauri-apps/plugin-process": "~2.0.0",
         "@tauri-apps/plugin-shell": "^2.0.1",
-        "isbot": "^4.4.0",
+        "isbot": "^5.1.17",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     },
     "devDependencies": {
-        "@chromatic-com/storybook": "^2.0.2",
+        "@chromatic-com/storybook": "^3.2.2",
         "@commitlint/cli": "^19.6.0",
         "@commitlint/config-conventional": "^19.6.0",
         "@eslint/compat": "^1.2.3",
         "@eslint/eslintrc": "^3.2.0",
-        "@eslint/js": "^9.15.0",
+        "@eslint/js": "^9.16.0",
         "@mantine/core": "^7.14.3",
         "@mantine/hooks": "^7.14.3",
         "@mantine/modals": "^7.14.3",
         "@remix-run/dev": "^2.15.0",
         "@semantic-release/exec": "^6.0.3",
         "@souhaildev/reactemojis": "^1.0.5",
-        "@storybook/addon-essentials": "^8.4.5",
-        "@storybook/addon-interactions": "^8.4.5",
-        "@storybook/addon-links": "^8.4.5",
-        "@storybook/addon-onboarding": "^8.4.5",
-        "@storybook/blocks": "^8.4.5",
-        "@storybook/react": "^8.4.5",
-        "@storybook/react-vite": "^8.4.5",
-        "@storybook/test": "^8.4.5",
-        "@tabler/icons-react": "^3.23.0",
-        "@tanstack/react-query": "^5.61.5",
+        "@storybook/addon-essentials": "^8.4.6",
+        "@storybook/addon-interactions": "^8.4.6",
+        "@storybook/addon-links": "^8.4.6",
+        "@storybook/addon-onboarding": "^8.4.6",
+        "@storybook/blocks": "^8.4.6",
+        "@storybook/react": "^8.4.6",
+        "@storybook/react-vite": "^8.4.6",
+        "@storybook/test": "^8.4.6",
+        "@tabler/icons-react": "^3.24.0",
+        "@tanstack/react-query": "^5.62.2",
         "@tauri-apps/cli": "^2.1.0",
         "@tauri-apps/plugin-updater": "^2.0.0",
         "@types/react": "^18.3.12",
@@ -68,18 +68,18 @@
         "conventional-changelog-conventionalcommits": "^8.0.0",
         "cz-conventional-changelog": "^3.3.0",
         "date-fns": "^4.1.0",
-        "dprint": "^0.47.5",
-        "eslint": "^9.15.0",
-        "eslint-import-resolver-typescript": "^3.6.3",
+        "dprint": "^0.47.6",
+        "eslint": "^9.16.0",
+        "eslint-import-resolver-typescript": "^3.7.0",
         "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-jsx-a11y": "^6.10.2",
         "eslint-plugin-react": "^7.37.2",
-        "eslint-plugin-react-hooks": "^4.6.2",
-        "eslint-plugin-react-refresh": "^0.4.14",
-        "eslint-plugin-storybook": "^0.9.0",
-        "globals": "^15.12.0",
+        "eslint-plugin-react-hooks": "^5.0.0",
+        "eslint-plugin-react-refresh": "^0.4.16",
+        "eslint-plugin-storybook": "^0.11.1",
+        "globals": "^15.13.0",
         "husky": "^9.1.7",
-        "marked": "^14.1.4",
+        "marked": "^15.0.3",
         "mdast": "^3.0.0",
         "mdast-util-find-and-replace": "^3.0.1",
         "npm-run-all": "^4.1.5",
@@ -92,18 +92,19 @@
         "remark-breaks": "^4.0.0",
         "remark-emoji": "^5.0.1",
         "remark-gfm": "^4.0.0",
-        "sass": "^1.81.0",
+        "sass": "^1.82.0",
         "semantic-release": "^24.2.0",
-        "storybook": "^8.4.5",
+        "storybook": "^8.4.6",
         "storybook-addon-mantine": "^4.0.2",
         "storybook-css-modules": "^1.0.8",
         "storybook-dark-mode": "^4.0.2",
+        "ts-unused-exports": "^11.0.1",
         "typed-scss-modules": "^8.0.1",
         "typescript": "^5.7.2",
-        "typescript-eslint": "^8.16.0",
+        "typescript-eslint": "^8.17.0",
         "unist-builder": "^4.0.0",
         "unist-util-visit": "^5.0.0",
-        "vite": "^5.4.11",
+        "vite": "^6.0.2",
         "vite-tsconfig-paths": "^5.1.3",
         "zustand": "^5.0.1"
     }
