--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,8 +13,8 @@ tauri-plugin-process = '2'
 tauri-plugin-shell = '2.0.0'
 tauri-plugin-updater = '2.1.0'
 ts-rs = '10.1.0'
-ts-rs-fn = { path = "../../ts-rs-fn" }
-merge-types = { path = "../../merge-types" }
+ts-rs-fn = { path = "../crates/ts-rs-fn" }
+merge-types = { path = "../crates/merge-types" }
 
 [dependencies.serde]
 features = ['derive']
