build(): issueが閉じられた時に自動でstatus labelを付与

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -61,7 +61,7 @@
         [
             "@semantic-release/exec",
             {
-                "prepareCmd": "bash prepare.sh ${nextRelease.version}"
+                "prepareCmd": "bash scripts/prepare.sh ${nextRelease.version}"
             }
         ]
     ]
