--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "conventional-changelog-conventionalcommits": "^8.0.0",
         "cz-conventional-changelog": "^3.3.0",
         "date-fns": "^4.1.0",
+        "decimal.js": "^10.4.3",
         "dprint": "^0.47.6",
         "eslint": "^9.16.0",
         "eslint-import-resolver-typescript": "^3.7.0",
@@ -80,6 +81,7 @@
         "eslint-plugin-react-hooks": "^5.0.0",
         "eslint-plugin-react-refresh": "^0.4.16",
         "eslint-plugin-storybook": "^0.11.1",
+        "fast-deep-equal": "^3.1.3",
         "globals": "^15.13.0",
         "husky": "^9.1.7",
         "marked": "^15.0.3",
