--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "sb": "run-p storybook dev:*",
         "storybook": "storybook dev -p 6006",
         "tauri": "tauri",
-        "vite": "vite"
+        "vite": "vite",
+        "lint:fix": "eslint \"app/**/*.{ts, tsx}\" --fix",
+        "format": "dprint fmt --diff"
     },
     "commitlint": {
         "extends": [
@@ -68,6 +70,7 @@
         "@types/react-dom": "^18.3.1",
         "@types/react-transition-group": "^4.4.11",
         "@vitejs/plugin-react": "^4.3.4",
+        "ansi-regex": "^6.1.0",
         "conventional-changelog-conventionalcommits": "^8.0.0",
         "cz-conventional-changelog": "^3.3.0",
         "date-fns": "^4.1.0",
