--- a/.github/workflows/issue-closed.yml
+++ b/.github/workflows/issue-closed.yml
@@ -8,6 +8,7 @@ jobs:
     add_label:
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/checkout@v2
             - name: Add label
               uses: actions/github-script@v7
               with:
