--- a/.github/workflows/issue-closed.yml
+++ b/.github/workflows/issue-closed.yml
@@ -14,4 +14,4 @@ jobs:
               with:
                   github-token: ${{secrets.GITHUB_TOKEN}}
                   script: |
-                      await (await import('${{ github.workspace }}/scripts/issue/closed')).default()
+                      await (await import('${{ github.workspace }}/scripts/issue/closed.js')).default()
