--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
         "build": "tsc && react-router build",
         "build-storybook": "storybook build",
         "dev": "run-p vite dev:*",
-        "dev:scss": "typed-scss-modules -w app/**/*.module.scss --additionalData \"$(cat app/_mantine.scss)\"",
+        "dev:scss": "typed-scss-modules -w app/**/*.module.scss --additionalData \"@use \\\"./app/_mantine\\\" as mantine;\"",
         "prepare": "husky",
         "preview": "vite preview",
         "sb": "run-p storybook dev:*",
         "storybook": "storybook dev -p 6006",
         "tauri": "tauri",
         "vite": "vite",
-        "lint:fix": "eslint \"app/**/*.{ts, tsx}\" --fix",
+        "lint:fix": "eslint \"app/**/*.{ts,tsx}\" --fix",
         "format": "dprint fmt --diff"
     },
     "commitlint": {
@@ -28,92 +28,95 @@
         }
     },
     "dependencies": {
-        "@react-router/node": "^7.0.2",
-        "@react-router/serve": "^7.0.2",
-        "@tauri-apps/api": "^2.1.1",
-        "@tauri-apps/plugin-autostart": "~2.0.0",
-        "@tauri-apps/plugin-process": "~2.0.0",
-        "@tauri-apps/plugin-shell": "^2.0.1",
-        "isbot": "^5.1.17",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "react-router": "^7.0.2"
+        "@react-router/node": "^7.1.3",
+        "@react-router/serve": "^7.1.3",
+        "@tauri-apps/api": "^2.2.0",
+        "@tauri-apps/plugin-autostart": "~2.2.0",
+        "@tauri-apps/plugin-process": "~2.2.0",
+        "@tauri-apps/plugin-shell": "^2.2.0",
+        "isbot": "^5.1.21",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-router": "^7.1.3"
     },
     "devDependencies": {
         "@actions/github": "^6.0.0",
-        "@chromatic-com/storybook": "^3.2.2",
-        "@commitlint/cli": "^19.6.0",
+        "@chromatic-com/storybook": "^3.2.4",
+        "@commitlint/cli": "^19.6.1",
         "@commitlint/config-conventional": "^19.6.0",
-        "@eslint/compat": "^1.2.3",
+        "@eslint/compat": "^1.2.5",
         "@eslint/eslintrc": "^3.2.0",
-        "@eslint/js": "^9.16.0",
-        "@mantine/core": "^7.14.3",
-        "@mantine/hooks": "^7.14.3",
-        "@mantine/modals": "^7.14.3",
-        "@octokit/rest": "^21.0.2",
-        "@react-router/dev": "^7.0.2",
+        "@eslint/js": "^9.18.0",
+        "@mantine/code-highlight": "^7.16.2",
+        "@mantine/core": "^7.16.1",
+        "@mantine/hooks": "^7.16.1",
+        "@mantine/modals": "^7.16.1",
+        "@octokit/rest": "^21.1.0",
+        "@react-router/dev": "^7.1.3",
         "@semantic-release/exec": "^6.0.3",
         "@souhaildev/reactemojis": "^1.0.5",
-        "@storybook/addon-essentials": "^8.4.6",
-        "@storybook/addon-interactions": "^8.4.6",
-        "@storybook/addon-links": "^8.4.6",
-        "@storybook/addon-onboarding": "^8.4.6",
-        "@storybook/blocks": "^8.4.6",
-        "@storybook/react": "^8.4.6",
-        "@storybook/react-vite": "^8.4.6",
-        "@storybook/test": "^8.4.6",
-        "@tabler/icons-react": "^3.24.0",
-        "@tanstack/react-query": "^5.62.2",
-        "@tauri-apps/cli": "^2.1.0",
-        "@tauri-apps/plugin-updater": "^2.0.0",
-        "@types/react": "^18.3.12",
-        "@types/react-dom": "^18.3.1",
-        "@types/react-transition-group": "^4.4.11",
+        "@storybook/addon-essentials": "8.4.6",
+        "@storybook/addon-interactions": "8.4.6",
+        "@storybook/addon-links": "8.4.6",
+        "@storybook/addon-onboarding": "8.4.6",
+        "@storybook/blocks": "8.4.6",
+        "@storybook/react": "8.4.6",
+        "@storybook/react-vite": "8.4.6",
+        "@storybook/test": "8.4.6",
+        "@tabler/icons-react": "^3.29.0",
+        "@tanstack/query-sync-storage-persister": "^5.64.2",
+        "@tanstack/react-query": "^5.64.2",
+        "@tanstack/react-query-persist-client": "^5.64.2",
+        "@tauri-apps/cli": "^2.2.5",
+        "@tauri-apps/plugin-updater": "^2.3.1",
+        "@types/react": "^19.0.8",
+        "@types/react-dom": "^19.0.3",
+        "@types/react-transition-group": "^4.4.12",
         "@vitejs/plugin-react": "^4.3.4",
         "ansi-regex": "^6.1.0",
         "conventional-changelog-conventionalcommits": "^8.0.0",
         "cz-conventional-changelog": "^3.3.0",
         "date-fns": "^4.1.0",
         "decimal.js": "^10.4.3",
-        "dprint": "^0.47.6",
-        "eslint": "^9.16.0",
+        "dprint": "^0.48.0",
+        "eslint": "^9.18.0",
         "eslint-import-resolver-typescript": "^3.7.0",
         "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-jsx-a11y": "^6.10.2",
-        "eslint-plugin-react": "^7.37.2",
-        "eslint-plugin-react-hooks": "^5.0.0",
-        "eslint-plugin-react-refresh": "^0.4.16",
-        "eslint-plugin-storybook": "^0.11.1",
+        "eslint-plugin-react": "^7.37.4",
+        "eslint-plugin-react-hooks": "^5.1.0",
+        "eslint-plugin-react-refresh": "^0.4.18",
+        "eslint-plugin-storybook": "^0.11.2",
         "fast-deep-equal": "^3.1.3",
-        "globals": "^15.13.0",
+        "globals": "^15.14.0",
         "husky": "^9.1.7",
-        "marked": "^15.0.3",
+        "marked": "^15.0.6",
         "mdast": "^3.0.0",
-        "mdast-util-find-and-replace": "^3.0.1",
+        "mdast-util-find-and-replace": "^3.0.2",
         "npm-run-all": "^4.1.5",
-        "postcss": "^8.4.49",
+        "postcss": "^8.5.1",
         "postcss-preset-mantine": "^1.17.0",
         "postcss-simple-vars": "^7.0.1",
-        "react-flip-numbers": "^3.0.8",
-        "react-markdown": "^9.0.1",
+        "react-flip-numbers": "^3.0.9",
+        "react-markdown": "^9.0.3",
         "react-transition-group": "^4.4.5",
         "remark-breaks": "^4.0.0",
         "remark-emoji": "^5.0.1",
         "remark-gfm": "^4.0.0",
-        "sass": "^1.82.0",
-        "semantic-release": "^24.2.0",
-        "storybook": "^8.4.6",
-        "storybook-addon-mantine": "^4.0.2",
+        "sass": "^1.83.4",
+        "semantic-release": "^24.2.1",
+        "storybook": "8.4.6",
+        "storybook-addon-mantine": "^5.0.0",
         "storybook-css-modules": "^1.0.8",
         "storybook-dark-mode": "^4.0.2",
         "ts-unused-exports": "^11.0.1",
-        "typed-scss-modules": "^8.0.1",
-        "typescript": "^5.7.2",
-        "typescript-eslint": "^8.17.0",
+        "typed-scss-modules": "^8.1.1",
+        "typescript": "^5.7.3",
+        "typescript-eslint": "^8.21.0",
         "unist-builder": "^4.0.0",
         "unist-util-visit": "^5.0.0",
-        "vite": "^6.0.2",
-        "vite-tsconfig-paths": "^5.1.3",
-        "zustand": "^5.0.1"
+        "vite": "^6.0.11",
+        "vite-tsconfig-paths": "^5.1.4",
+        "zustand": "^5.0.3"
     }
 }
