--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
         "fast-deep-equal": "^3.1.3",
         "globals": "^15.14.0",
         "husky": "^9.1.7",
+        "knip": "^5.43.5",
         "marked": "^15.0.6",
         "mdast": "^3.0.0",
         "mdast-util-find-and-replace": "^3.0.2",
