--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,18 +1,18 @@
 [build-dependencies]
 [build-dependencies.tauri-build]
 features = []
-version = '2.0.0'
+version = "2.2.0"
 
 [dependencies]
-chrono = '0.4.38'
-chrono-tz = '0.10.0'
-handlebars = '6.2.0'
-log = '0.4.22'
+chrono = "0.4.41"
+chrono-tz = "0.10.3"
+handlebars = "6.3.2"
+log = "0.4.27"
 merge-types = { path = "../crates/merge-types" }
 serde_json = '1'
 tauri-plugin-process = '2'
-tauri-plugin-shell = '2.0.0'
-tauri-plugin-updater = '2.1.0'
+tauri-plugin-shell = "2.2.1"
+tauri-plugin-updater = "2.7.1"
 ts-rs = '10.1.0'
 ts-rs-fn = { path = "../crates/ts-rs-fn" }
 
@@ -22,11 +22,11 @@ version = '1'
 
 [dependencies.tauri]
 features = ['tray-icon', "devtools"]
-version = '2.0.6'
+version = "2.5.1"
 
 [dependencies.tokio]
 features = ['tracing']
-version = '1.41.0'
+version = "1.45.0"
 
 [lib]
 crate-type = ['staticlib', 'cdylib', 'rlib']
